--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Algorithm VE</title>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
